# book_andesito

./: .env  .gitignore  404.html  Cargo.toml  LICENSE.md  README.md  astro.config.mjs  book.toml  compose.yml  eslint.config.js  hugo.json  index.html  package.json  pnpm-lock.yaml  sitemap-0.xml  sitemap-index.xml  tailwind.config.mjs  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
_astro/: Search.astro_astro_type_script_index_0_lang.yWJXj0S8.js  index.Ch1SQihQ.css  ui-core.lsSM-jbg.js
book/: book.toml
c_cpp/: index.html
c_cpp/cmake/: index.html
c_cpp/compiler/: index.html
c_cpp/debugger/: index.html
code/c_cpp_projects/oriented_graph_with_cmake/src/graph/: CMakeLists.txt
content/: _index.adoc  _index.md
content/c_cpp/: _index.md
content/git/: _index.md
content/go/: _index.md
content/java/: _index.md
content/javascript/: _index.md
content/python/: _index.md
content/ruby/: _index.md
content/rust/: _index.md
content/shell/: _index.md
content/terminal/: _index.md
content/vscode/: _index.md  settings.json
content/wsl/: _index.md
git/: index.html
go/: index.html
introduction/: index.html
java/: index.html
javascript/: index.html
javascript/node/: index.html
javascript/pnpm/: index.html
layouts/shortcodes/: figure.html
pagefind/: pagefind-entry.json  pagefind.pt_332927c5f0.pf_meta
pagefind/fragment/: pt_10a05ef.pf_fragment  pt_1c79941.pf_fragment  pt_2227aeb.pf_fragment  pt_39beac2.pf_fragment  pt_3d5ccb1.pf_fragment  pt_433977d.pf_fragment  pt_5127441.pf_fragment  pt_5155334.pf_fragment  pt_537f5dc.pf_fragment  pt_5cb5f3b.pf_fragment  pt_5da27ec.pf_fragment  pt_5e5e766.pf_fragment  pt_6312403.pf_fragment  pt_63d4509.pf_fragment  pt_687c5f2.pf_fragment  pt_6a4df8a.pf_fragment  pt_6a6956d.pf_fragment  pt_6f41119.pf_fragment  pt_70c8745.pf_fragment  pt_7e2f4b3.pf_fragment  pt_84365e3.pf_fragment  pt_8cd7857.pf_fragment  pt_8f731f2.pf_fragment  pt_9dc1612.pf_fragment  pt_a1bc204.pf_fragment  pt_a68355f.pf_fragment  pt_a9174d1.pf_fragment  pt_ab8e251.pf_fragment  pt_acce87b.pf_fragment  pt_b18ec39.pf_fragment  pt_c84e4f1.pf_fragment  pt_c9d3e62.pf_fragment  pt_cc4b416.pf_fragment  pt_cde7116.pf_fragment  pt_ce57c1f.pf_fragment  pt_e663948.pf_fragment  pt_e882559.pf_fragment  pt_e8ca7a5.pf_fragment  pt_e8dbecc.pf_fragment  pt_eeefbb6.pf_fragment  (+1 more)
pagefind/index/: pt_6bb0d9c.pf_index  pt_b8f55ff.pf_index  pt_c457c89.pf_index
public/code/c_cpp_projects/oriented_graph/: .gitignore  CMakeLists.txt
public/code/c_cpp_projects/oriented_graph/edge/: edge.cpp  edge.hpp
public/code/c_cpp_projects/oriented_graph/graph/: graph.cpp  graph.hpp
public/code/c_cpp_projects/oriented_graph/node/: node.hpp
public/code/c_cpp_projects/oriented_graph/src/: CMakeLists.txt  main.cpp
public/code/c_cpp_projects/oriented_graph/src/edge/: CMakeLists.txt  edge.hpp
public/code/c_cpp_projects/oriented_graph/src/graph/: CMakeLists.txt  graph.cpp  graph.hpp
public/code/c_cpp_projects/oriented_graph/src/node/: CMakeLists.txt  node.hpp
public/code/c_cpp_projects/oriented_graph_with_cmake/: CMakeLists.txt
public/code/c_cpp_projects/oriented_graph_with_cmake/src/: CMakeLists.txt
public/code/c_cpp_projects/oriented_graph_with_cmake/src/edge/: CMakeLists.txt
public/code/c_cpp_projects/oriented_graph_with_cmake/src/node/: CMakeLists.txt
python/: index.html
python/install/: index.html
python/run/: index.html
ruby/: index.html
rust/: index.html
shell/: index.html
shell/plugins/: index.html
shell/powershell/: index.html
shell/themes/: index.html
shell/zsh/: index.html
src/: 404.md  README.md  SUMMARY.md  constants.ts  env.d.ts  main.rs  styles.css  util.ts
terminal/: index.html
vscode/: index.html
wsl/: index.html
(+157 files in other folders)
